welcome.lessons.welcome.bat.bool1.MonkeyTrouble.scala.error
monkeyTrouble:1: error: value &&! is not a member of Boolean
def monkeyTrouble(aSmile:Boolean, bSmile:Boolean): Boolean = {if ((aSmile&&bSmile)||(!aSmile&&!bSmile)) {return true}
                                                                                            ^